--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,8 @@
   "semi": true,
   "singleQuote": false,
   "trailingComma": "es5",
-  "printWidth": 100
+  "printWidth": 100,
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "arrowParens": "always"
 }
