--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "konn",
   "version": "1.0.0",
-  "description": "Create and manage a single page for all your links",
-  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -12,20 +10,25 @@
     "lint:fix": "eslint 'src/**/*.{ts,tsx}' --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,scss,md}\""
   },
-  "keywords": [],
-  "author": "Bakhriddin Chorshanbiev",
-  "license": "ISC",
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.14",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^5.0.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.545.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.0",
     "vite": "^7.1.9"
   },
   "devDependencies": {
+    "@types/node": "^24.7.2",
     "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
@@ -33,7 +36,8 @@
     "eslint-plugin-unicorn": "^61.0.2",
     "husky": "^8.0.0",
     "lint-staged": "^16.2.4",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "tw-animate-css": "^1.4.0"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
