--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "firebase-admin": "^13.5.0",
     "google-auth-library": "^8.7.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "uuid": "^9.0.0"
   }
